@@ -84,7 +84,8 @@ void* SCIPgetNlpiOracleIpopt(
  */
 void SCIPsetModifiedDefaultSettingsIpopt(
    SCIP_NLPI*            nlpi,               /**< Ipopt NLP interface */
-   const char*           optionsstring       /**< string with options as in Ipopt options file */
+   const char*           optionsstring,      /**< string with options as in Ipopt options file */
+   SCIP_Bool             append              /**< whether to append to modified default settings or to overwrite */
    )
 {
    SCIPerrorMessage("Ipopt not available!\n");
